--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
      border-color: #F2F3F4;
 }
 .btna{
-    width: 49px;
+    width: 22%;
     margin-top: 5px;
     margin-left: 2px;
     border-color: #F2F3F4;
